--- a/eer.html
+++ b/eer.html
@@ -10,6 +10,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script type="text/babel">
+
+    // var newEntity = function(entityName,position){
+    //     var {x,y} = position;
+    //     var Ent = new erd.Entity({
+    //       position: { x: x, y: y},
+    //       attrs: {
+    //           text: {
+    //               fill: '#ffffff',
+    //               text: entityName,
+    //               'letter-spacing': 0,
+    //               style: { 'text-shadow': '1px 0 1px #333333' }
+    //           },
+    //           '.outer, .inner': {
+    //               fill: '#31d0c6',
+    //               stroke: 'none',
+    //               filter: { name: 'dropShadow',  args: { dx: 0.5, dy: 2, blur: 2, color: '#333333' }}
+    //           }
+    //       }
+    //     })
+    //     graph.addCells([Ent]);
+    // }
+
     class Paper extends React.Component{
 
       constructor(){
@@ -19,14 +41,21 @@
           clicked:false,
           btnTitle:'Delete an item'
         };
+
+        var self = this;//I know...
+        $('.erd').click(function(){
+          if (self.state.clicked){
+            this.remove();
+          }
+        });
       }
 
-      clickHandler(){
+      deleteClickHandler(){
         var title;
         if (this.state.clicked){
-          title = 'Deleting...';
-        } else {
           title = 'Delete an item';
+        } else {
+          title = 'Deleting...';
         }
         this.setState({clicked:!this.state.clicked,btnTitle:title});
       }
@@ -34,7 +63,8 @@
       render(){
         return (
           <div>
-            <button id='deleteButton' onClick={this.clickHandler.bind(this)}>{this.state.btnTitle}</button>
+            <button id='deleteButton' onClick={this.deleteClickHandler.bind(this)}>{this.state.btnTitle}</button>
+            // <button id='newEntityButton' onClick={this.entityClickHandler.bind(this)}>{this.state.btnTitle}</button>
           </div>
         )
       }
