--- a/eer.html
+++ b/eer.html
@@ -64,7 +64,7 @@
         return (
           <div>
             <button id='deleteButton' onClick={this.deleteClickHandler.bind(this)}>{this.state.btnTitle}</button>
-            // <button id='newEntityButton' onClick={this.entityClickHandler.bind(this)}>{this.state.btnTitle}</button>
+            <!--<button id='newEntityButton' onClick={this.entityClickHandler.bind(this)}>{this.state.btnTitle}</button>-->
           </div>
         )
       }
